--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         /* Global styling */
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f4f4f9;
+            background-color: #fce4ec;
             margin: 0;
             padding: 0;
         }
@@ -24,8 +24,8 @@
         }
 
         h1 {
-            font-size: 2em;
-            color: #333;
+            font-size: 2.5em;
+            color: #d81b60;
             margin-bottom: 20px;
         }
 
@@ -42,18 +42,18 @@
         }
 
         select {
-            background-color: #f0f8ff;
+            background-color: #f8bbd0;
         }
 
         button {
-            background-color: #4CAF50;
+            background-color: #e91e63;
             color: white;
             border: none;
             transition: background-color 0.3s ease;
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #c2185b;
         }
 
         /* Group list styling */
@@ -64,20 +64,14 @@
         }
 
         .group-list li {
-            font-size: 1.1em;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
+            font-size: 1.2em;
+            background-color: #fce4ec;
+            border: 1px solid #f48fb1;
             border-radius: 5px;
             margin-bottom: 10px;
             padding: 10px;
             text-align: left;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .group-list li:hover {
-            transform: scale(1.05);
-            background-color: #e0f7fa;
         }
 
         /* Responsive design */
